add page air conditioner

--- a/index.html
+++ b/index.html
@@ -1444,7 +1444,7 @@
                     date: '2024-01-02',
                     readTime: '3 دقائق',
                     author: 'فريق الصيانة',
-                    link: '#'
+                    link: './air-conditioner-maintenance/index.html'
                 },
                 {
                     id: 8,
