add page fire-fighting

--- a/index.html
+++ b/index.html
@@ -1437,25 +1437,26 @@
             maintenance: [
                 {
                     id: 7,
-                    title: 'صيانة مكيفات مبنى تجاري في دبي',
-                    excerpt: 'مشروع صيانة شاملة لنظام التكييف في مبنى تجاري مكون من 20 طابق في دبي. تم تنظيف وصيانة 150 وحدة تكييف.',
+                    title: 'صيانة وتعديل المكيفات  ',
+                    excerpt: 'دليل شامل لصيانة أنظمة التكييف، يوضح أفضل الممارسات لإطالة عمر المكيف، وخطوات التنظيف الدورية، ونصائح الحفاظ على كفاءة التبريد وتوفير استهلاك الطاقة.',
                     image: 'https://images.unsplash.com/photo-1621905251189-08b45d6a269e?w=500&h=300&fit=crop',
                     category: 'maintenance',
-                    date: '2024-01-02',
-                    readTime: '3 دقائق',
+                    date: '',
+                    readTime: '',
                     author: 'فريق الصيانة',
                     link: './air-conditioner-maintenance/index.html'
                 },
                 {
                     id: 8,
-                    title: 'صيانة أنظمة السباكة في مجمع سكني',
-                    excerpt: 'مشروع صيانة شاملة لأنظمة السباكة في مجمع سكني بالرياض. تم إصلاح وتحديث شبكة المياه لـ 80 وحدة سكنية.',
+                    title: 'مكافحة الحرائق: دليل شامل للسلامة والوقاية',
+                  excerpt: 'الدليل الكامل لمكافحة الحرائق والوقاية منها: استراتيجيات الوقاية، وأساليب الإنقاذ، وخطط السلامة لحماية الأرواح والممتلكات، مع خطوات وإرشادات شاملة لتحقيق أعلى مستويات الأمان والسلامة في المنازل والأماكن العامة.',
+
                     image: 'https://images.unsplash.com/photo-1607472586893-edb57bdc0e39?w=500&h=300&fit=crop',
                     category: 'maintenance',
-                    date: '2023-12-30',
-                    readTime: '4 دقائق',
-                    author: 'فريق صيانة السباكة',
-                    link: '#'
+                    date: '',
+                    readTime: '',
+                    author: 'فريق صيانة الأنظمة',
+                    link: './fire-fighting/index.html'
                 },
                 {
                     id: 9,
