Website color change

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="container-custom">
         <div class="text-center text-pure-white mb-16">
             <h2 class="text-4xl lg:text-5xl font-bold mb-6 font-luxury">
-                نحن <span class="text-rose-gold">شريككم الموثوق</span> في الخليج
+                نحن <span class="text-yellow-600">شريككم الموثوق</span> في الخليج
             </h2>
             <p class="text-xl font-elegant max-w-3xl mx-auto">
                 بخبرة تمتد لسنوات في سوق الخليج، نلتزم بتقديم حلول متكاملة ومبتكرة تلبي أعلى معايير الجودة والاحترافية. فريقنا المتخصص يسعى دائمًا لتجاوز توقعاتكم، مقدمين خدمات مصممة خصيصًا لتناسب احتياجاتكم الفريدة.
@@ -195,8 +195,8 @@
                 <div class="service-icon mb-6">
                     <i class="fas fa-broom fa-3x text-rose-gold"></i>
                 </div>
-                <h3 class="text-2xl font-bold text-charcoal mb-4 font-luxury">خدمات النظافة الشاملة</h3>
-                <p class="text-silver-mist font-elegant">
+                <h3 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">خدمات النظافة الشاملة</h3>
+                <p class="text-black/50 font-elegant">
                     نقدم حلول نظافة متكاملة للمنازل، المكاتب، والمنشآت التجارية والصناعية. نستخدم أحدث التقنيات والمواد الصديقة للبيئة لضمان بيئة صحية ونظيفة، مع فريق مدرب على أعلى مستوى لتقديم خدمة لا تضاهى في جميع أنحاء الخليج. [7, 15, 18, 19]
                 </p>
             </div>
@@ -206,8 +206,8 @@
                 <div class="service-icon mb-6">
                     <i class="fas fa-snowflake fa-3x text-rose-gold"></i>
                 </div>
-                <h3 class="text-2xl font-bold text-charcoal mb-4 font-luxury">صيانة وتركيب التكييف</h3>
-                <p class="text-silver-mist font-elegant">
+                <h3 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">صيانة وتركيب التكييف</h3>
+                <p class="text-black/50  font-elegant">
                     متخصصون في جميع أعمال التكييف والتبريد، من التركيب والصيانة الدورية إلى التعديلات والإصلاحات. فريقنا الفني يمتلك الخبرة اللازمة للتعامل مع كافة أنواع الأنظمة لضمان أقصى درجات الراحة والكفاءة في مناخ الخليج الحار. [4, 8, 9, 10, 12]
                 </p>
             </div>
@@ -217,8 +217,8 @@
                 <div class="service-icon mb-6">
                     <i class="fas fa-fire-extinguisher fa-3x text-rose-gold"></i>
                 </div>
-                <h3 class="text-2xl font-bold text-charcoal mb-4 font-luxury">حلول متكاملة لمكافحة الحرائق</h3>
-                <p class="text-silver-mist font-elegant">
+                <h3 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">حلول متكاملة لمكافحة الحرائق</h3>
+                <p class="text-black/50  font-elegant">
                     نقدم استشارات، توريد، تركيب، وصيانة لأنظمة مكافحة الحرائق المتطورة. نلتزم بأعلى معايير السلامة العالمية والمتطلبات المحلية لدول الخليج، لضمان حماية شاملة لأصولكم وسلامة الأفراد. [13, 14, 16, 20, 21]
                 </p>
             </div>
@@ -228,8 +228,8 @@
                 <div class="service-icon mb-6">
                     <i class="fas fa-truck-moving fa-3x text-rose-gold"></i>
                 </div>
-                <h3 class="text-2xl font-bold text-charcoal mb-4 font-luxury">خدمات نقل العفش الاحترافية</h3>
-                <p class="text-silver-mist font-elegant">
+                <h3 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">خدمات نقل العفش الاحترافية</h3>
+                <p class="text-black/50  font-elegant">
                     نضمن لكم تجربة نقل عفش سلسة وآمنة داخل المدن وبين دول الخليج. فريقنا المتخصص يتعامل مع ممتلكاتكم بعناية فائقة، من التعبئة والتغليف إلى النقل والتركيب، لراحة بالكم التامة. [1, 2, 3, 5, 6]
                 </p>
             </div>
@@ -239,8 +239,8 @@
                 <div class="service-icon mb-6">
                     <i class="fas fa-award fa-3x text-rose-gold"></i>
                 </div>
-                <h3 class="text-2xl font-bold text-charcoal mb-4 font-luxury">الجودة والاحترافية</h3>
-                <p class="text-silver-mist font-elegant">
+                <h3 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">الجودة والاحترافية</h3>
+                <p class="text-black/50  font-elegant">
                     نلتزم بأعلى معايير الجودة في كل خدمة نقدمها. فريقنا مكون من خبراء مؤهلين ومدربين لتقديم حلول احترافية وموثوقة، مع التركيز على التفاصيل لضمان رضاكم التام في كل خطوة.
                 </p>
             </div>
@@ -250,8 +250,8 @@
                 <div class="service-icon mb-6">
                     <i class="fas fa-clock fa-3x text-rose-gold"></i>
                 </div>
-                <h3 class="text-2xl font-bold text-charcoal mb-4 font-luxury">الالتزام والدقة</h3>
-                <p class="text-silver-mist font-elegant">
+                <h3 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">الالتزام والدقة</h3>
+                <p class="text-black/50  font-elegant">
                     نقدر وقتكم ونلتزم بالمواعيد المحددة بدقة متناهية. سرعة التنفيذ لا تعني التنازل عن الجودة، بل هي جزء من منهجيتنا لتقديم خدمات فعالة وفي الوقت المناسب، لتلبية احتياجاتكم بفاعلية.
                 </p>
             </div>
@@ -266,7 +266,7 @@
             <!-- Blog Header -->
             <div class="text-center mb-16">
                 <h2 class="text-4xl lg:text-5xl font-bold text-luxury mb-6 font-luxury">مدونة المشاريع</h2>
-                <p class="text-xl text-charcoal opacity-80 max-w-3xl mx-auto font-elegant leading-relaxed">
+                <p class="text-xl text-yellow-600 opacity-80 max-w-3xl mx-auto font-elegant leading-relaxed">
                     اكتشف قصص نجاح مشاريعنا ونصائح الخبراء في عالم الخدمات المنزلية الفاخرة
                 </p>
             </div>
@@ -314,7 +314,7 @@
     <section class="section-padding bg-pure-white">
         <div class="container-custom">
             <div class="text-center mb-16">
-                <h2 class="text-4xl lg:text-5xl font-bold text-charcoal mb-6 font-luxury">
+                <h2 class="text-4xl lg:text-5xl font-bold text-yellow-600 mb-6 font-luxury">
                     تواصل <span class="text-luxury">معنا</span>
                 </h2>
                 <p class="text-silver-mist text-xl font-elegant">نحن هنا لخدمتك في أي وقت بأعلى معايير الفخامة</p>
@@ -325,7 +325,7 @@
                     <div class="service-icon">
                         <i class="fas fa-phone"></i>
                     </div>
-                    <h3 class="text-2xl font-bold text-charcoal mb-4 font-luxury">اتصل بنا</h3>
+                    <h3 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">اتصل بنا</h3>
                     <p class="text-silver-mist text-lg font-elegant">0565265233</p>
                 </div>
                 
@@ -333,7 +333,7 @@
                     <div class="service-icon">
                         <i class="fas fa-envelope"></i>
                     </div>
-                    <h3 class="text-2xl font-bold text-charcoal mb-4 font-luxury">راسلنا</h3>
+                    <h3 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">راسلنا</h3>
                     <p class="text-silver-mist text-lg font-elegant">info@gulf-services.com</p>
                 </div>
                 
@@ -341,7 +341,7 @@
                     <div class="service-icon">
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
-                    <h3 class="text-2xl font-bold text-charcoal mb-4 font-luxury">موقعنا</h3>
+                    <h3 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">موقعنا</h3>
                     <p class="text-silver-mist text-lg font-elegant">جميع دول الخليج العربي</p>
                 </div>
             </div>
