--- a/air-conditioner-maintenance/index.html
+++ b/air-conditioner-maintenance/index.html
@@ -169,7 +169,8 @@
     </section>
 
     <!-- Importance Section -->
-    <section id="importance" class="py-20 bg-gradient-to-br from-primary-light/10 to-primary-light/5">
+
+ <section id="importance" class="py-20 bg-gradient-to-br from-primary-light/10 to-primary-light/5">
         <div class="container mx-auto px-4">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-gradient mb-6">أهمية صيانة المكيفات</h2>
@@ -277,7 +278,7 @@
                         </div>
                         <h3 class="text-2xl font-bold text-gray-800">مكيفات السبليت</h3>
                     </div>
-                    <img src="images/split-ac.jpg" alt="مكيف سبليت" class="w-full h-48 object-cover rounded-lg mb-6">
+                    <img src="../assets/images/istockphoto-519620696-612x612.jpg" alt="مكيف سبليت" class="w-full h-48 object-cover rounded-lg mb-6">
                     <p class="text-gray-700 mb-6">
                         تُعد مكيفات السبليت من أكثر الأنواع شيوعاً في المنازل والمكاتب الحديثة. تتكون من وحدتين منفصلتين: وحدة داخلية ووحدة خارجية.
                     </p>
@@ -311,7 +312,7 @@
                         </div>
                         <h3 class="text-2xl font-bold text-gray-800">مكيفات الشباك</h3>
                     </div>
-                    <img src="images/technician-work.jpg" alt="مكيف شباك" class="w-full h-48 object-cover rounded-lg mb-6">
+                    <img src="../assets/images/istockphoto-185001395-612x612.jpg" alt="مكيف شباك" class="w-full h-48 object-cover rounded-lg mb-6">
                     <p class="text-gray-700 mb-6">
                         تُعد مكيفات الشباك من أقدم وأبسط أنواع المكيفات وأكثرها شيوعاً في المنازل الصغيرة والغرف الفردية.
                     </p>
@@ -345,7 +346,7 @@
                         </div>
                         <h3 class="text-2xl font-bold text-gray-800">المكيفات المركزية</h3>
                     </div>
-                    <img src="images/central-ac.webp" alt="مكيف مركزي" class="w-full h-48 object-cover rounded-lg mb-6">
+                    <img src="../assets/images/istockphoto-1171353535-612x612.jpg" alt="مكيف مركزي" class="w-full h-48 object-cover rounded-lg mb-6">
                     <p class="text-gray-700 mb-6">
                         تُستخدم المكيفات المركزية لتبريد مبنى بأكمله أو عدة غرف في وقت واحد عبر شبكة من مجاري الهواء.
                     </p>
@@ -379,7 +380,7 @@
                         </div>
                         <h3 class="text-2xl font-bold text-gray-800">المكيفات المتنقلة</h3>
                     </div>
-                    <img src="images/cleaning-ac.jpg" alt="مكيف متنقل" class="w-full h-48 object-cover rounded-lg mb-6">
+                    <img src="../assets/images/istockphoto-1581204508-612x612.jpg" alt="مكيف متنقل" class="w-full h-48 object-cover rounded-lg mb-6">
                     <p class="text-gray-700 mb-6">
                         تُعد المكيفات المتنقلة حلاً مؤقتاً ومناسباً لتبريد غرفة واحدة ويمكن نقلها بسهولة بين الغرف.
                     </p>
@@ -1011,7 +1012,7 @@
                         </p>
                     </div>
                     <div class="relative">
-                        <img src="images/maintenance-hero.jpg" alt="صيانة المكيفات" class="rounded-lg shadow-xl w-full h-64 object-cover">
+                        <img src="	https://ironcool.net/img/air3.jpg" alt="صيانة المكيفات" class="rounded-lg shadow-xl w-full h-64 object-cover">
                         <div class="absolute inset-0 bg-gradient-to-t from-primary-dark/20 to-transparent rounded-lg"></div>
                     </div>
                 </div>
