--- a/air-conditioner-maintenance/index.html
+++ b/air-conditioner-maintenance/index.html
@@ -25,8 +25,15 @@
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
+  @font-face {
+            font-family: "Lama-sans";
+            src: url("../assets/font/LamaSans-Black.woff") format("woff");
+          
+
+        }
+
         body {
-            font-family: 'Tajawal', Arial, sans-serif;
+           font-family: "Lama-sans";
         }
         .gradient-bg {
             background: linear-gradient(135deg, #2c3981 0%, #4a59a3 100%);
