--- a/Blogs/index.html
+++ b/Blogs/index.html
@@ -96,7 +96,7 @@
                         <img  src="https://goldenmoonads.com/mainlogo.png" alt="">
                         
                     </div>
-                    <a href="index.html" class="text-2xl font-bold text-luxury font-luxury hover:opacity-80 transition-opacity">خدمات الخليج</a>
+                    <a href="index.html" class="text-2xl font-bold text-yellow-600 font-luxury hover:opacity-80 transition-opacity">خدمات الخليج</a>
                 </div>
                 
                 <div class="hidden lg:flex space-x-8 space-x-reverse">
