add footer in pages

--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
                 </p>
             </div>
         </div>
+    </footer>
 
     <script src="assets/js/main.js"></script>
 </body>
