add page and font

--- a/cleanliness-in-the-Gulf/index.html
+++ b/cleanliness-in-the-Gulf/index.html
@@ -12,10 +12,17 @@
 
     <style>
         body {
-            font-family: 'Cairo', sans-serif;
+             font-family: "Lama-sans";
             background-color: #faf9f7;
             color: #2d3748;
             line-height: 1.8;
+            
+        }
+          @font-face {
+            font-family: "Lama-sans";
+            src: url("../assets/font/LamaSans-Black.woff") format("woff");
+          
+
         }
         .primary-color {
             color: #590d3d;
