--- a/cleaning-companies/index.html
+++ b/cleaning-companies/index.html
@@ -31,7 +31,7 @@
    <style>
           @font-face {
             font-family: "Lama-sans";
-            src: url("../assets/font/LamaSans-Black.woff") format("woff");
+            src: url("../assets/font/ArbFONTS-LamaSans-Regular.ttf") format("woff");
           
 
         }
