change blogs pages

--- a/cleaning-companies/index.html
+++ b/cleaning-companies/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شركات التنظيف في السعودية: أهمية النظافة وتأثيرها على المجتمع والاقتصاد</title>
+    <title> شركات التنظيف في السعودية: أهمية النظافة وتأثيرها </title>
     <meta name="description" content="دليل شامل حول أهمية شركات التنظيف في السعودية مع التركيز على شركة نقاء كلين وخدماتها المتميزة في جدة">
     <meta name="keywords" content="شركات التنظيف, نقاء كلين, التنظيف في السعودية, شركة تنظيف جدة, خدمات النظافة">
     <meta name="author" content="نقاء كلين">
@@ -227,7 +227,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
                         <h5 class="text-xl font-bold mb-4">خدماتنا المميزة:</h5>
-                        <ul class="list-custom text-white">
+                        <ul class="list-custom text-black">
                             <li>تنظيف المنازل والفلل والشقق</li>
                             <li>تنظيف المكاتب والمباني التجارية</li>
                             <li>خدمات التعقيم والتطهير</li>
@@ -238,7 +238,7 @@
                     </div>
                     <div>
                         <h5 class="text-xl font-bold mb-4">مناطق خدماتنا:</h5>
-                        <ul class="list-custom text-white">
+                        <ul class="list-custom text-black">
                             <li>جدة (المقر الرئيسي)</li>
                             <li>مكة المكرمة</li>
                             <li>المدينة المنورة</li>
@@ -357,7 +357,7 @@
                 </h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-right">
                     <div>
-                        <ul class="list-custom text-white">
+                        <ul class="list-custom text-black">
                             <li>أكثر من 5000 عميل راضي</li>
                             <li>أكثر من 1000 مهمة تنظيف مكتملة</li>
                             <li>رضا العملاء 100%</li>
@@ -365,7 +365,7 @@
                         </ul>
                     </div>
                     <div>
-                        <ul class="list-custom text-white">
+                        <ul class="list-custom text-black">
                             <li>استخدام أحدث التقنيات</li>
                             <li>مواد تنظيف آمنة وصحية</li>
                             <li>خدمة عملاء متميزة</li>
@@ -432,14 +432,14 @@
                 </h4>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
-                        <ul class="list-custom text-white">
+                        <ul class="list-custom text-black">
                             <li>تقليل 50% من حالات نزلات البرد</li>
                             <li>انخفاض 40% في العدوى المعوية</li>
                             <li>تحسن 60% في الصحة العامة للأطفال</li>
                         </ul>
                     </div>
                     <div>
-                        <ul class="list-custom text-white">
+                        <ul class="list-custom text-black">
                             <li>توفير 30% من تكاليف العلاج</li>
                             <li>زيادة 25% في الإنتاجية</li>
                             <li>تحسن 45% في جودة الحياة</li>
@@ -903,7 +903,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
                         <h5 class="text-xl font-bold mb-4">إنجازاتنا:</h5>
-                        <ul class="list-custom text-white">
+                        <ul class="list-custom text-black">
                             <li>أكثر من 5000 عميل راضي</li>
                             <li>أكثر من 1000 مهمة تنظيف مكتملة</li>
                             <li>رضا العملاء 100%</li>
@@ -912,7 +912,7 @@
                     </div>
                     <div>
                         <h5 class="text-xl font-bold mb-4">التزامنا:</h5>
-                        <ul class="list-custom text-white">
+                        <ul class="list-custom text-black">
                             <li>استخدام تقنيات صديقة للبيئة</li>
                             <li>تدريب مستمر للفرق</li>
                             <li>الابتكار في الخدمات</li>
@@ -1053,7 +1053,7 @@
                 <!-- Newsletter & Social Media -->
                 <div>
                     <h3 class="footer-section-title">ابق على تواصل</h3>
-                    <p class="text-white/80 mb-4 font-montserrat">اشترك في نشرتنا الإخبارية للحصول على آخر العروض والنصائح</p>
+                    <p class="text-white mb-4 font-montserrat">اشترك في نشرتنا الإخبارية للحصول على آخر العروض والنصائح</p>
                     
                     
 
