--- a/cleanliness-in-the-Gulf/index.html
+++ b/cleanliness-in-the-Gulf/index.html
@@ -210,7 +210,7 @@
 
                 <p>في هذا السياق، طورت شركة فريش كلين حلولاً متخصصة للتعامل مع آثار العواصف الرملية، بما في ذلك استخدام معدات تنظيف متطورة قادرة على إزالة الغبار من الأماكن الصعبة، وتطبيق تقنيات الحماية الوقائية التي تقلل من تأثير الغبار على المباني.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-wind"></i>
                     </div>
@@ -308,7 +308,7 @@
 
                 <p>الدراسات النفسية تُظهر أن الأشخاص الذين يعيشون في بيئة نظيفة ومنظمة يتمتعون بصحة نفسية أفضل، ومستويات أقل من الاكتئاب والقلق. كما أن النظافة تساعد في تحسين التركيز والإنتاجية، سواء في المنزل أو في مكان العمل.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-brain"></i>
                     </div>
@@ -467,7 +467,7 @@
                 <h3>خدمات تنظيف المنازل الشاملة</h3>
                 <p>تُعتبر خدمات تنظيف المنازل من أهم الخدمات التي تقدمها شركة فريش كلين، حيث نفهم أن المنزل هو المكان الذي يجب أن يكون الأكثر نظافة وأماناً للعائلة. نحن نقدم خدمات تنظيف شاملة تغطي جميع جوانب المنزل، من الغرف الرئيسية إلى أصغر التفاصيل.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-home"></i>
                     </div>
@@ -542,7 +542,7 @@
                 <h3>خدمات تنظيف المكاتب والشركات</h3>
                 <p>تفهم شركة فريش كلين أن بيئة العمل النظيفة أساسية للإنتاجية والصحة المهنية. نحن نقدم خدمات تنظيف مكاتب شاملة تتناسب مع احتياجات الشركات والمؤسسات من جميع الأحجام.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-building"></i>
                     </div>
@@ -603,7 +603,7 @@
                 <h3>خدمات تنظيف النوافذ والواجهات</h3>
                 <p>النوافذ والواجهات الزجاجية تحتاج لعناية خاصة، خاصة في البيئة الخليجية حيث تتعرض للغبار والأتربة بشكل مستمر. فريش كلين تقدم خدمات تنظيف النوافذ المتخصصة للمنازل والمباني التجارية.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-window-maximize"></i>
                     </div>
@@ -768,7 +768,7 @@
                 <h3>أنظمة التنظيف الآلي والروبوتات</h3>
                 <p>مع التطور التكنولوجي، أصبحت الروبوتات والأنظمة الآلية جزءاً مهماً من صناعة التنظيف. هذه التقنيات تساعد في تحسين الكفاءة وتقليل الوقت المطلوب للتنظيف، خاصة في المساحات الكبيرة مثل المكاتب والمباني التجارية.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-robot"></i>
                     </div>
@@ -823,7 +823,7 @@
                 <h3>معدات التنظيف عالية الضغط</h3>
                 <p>معدات التنظيف عالية الضغط تُعتبر من الأدوات الأساسية في تنظيف الأسطح الخارجية والواجهات. هذه المعدات فعّالة جداً في إزالة الأوساخ العنيدة والرواسب من الأسطح الصلبة.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-water"></i>
                     </div>
@@ -950,7 +950,7 @@
                 <h3>المواد الكيميائية الصديقة للبيئة</h3>
                 <p>يُعتبر اختيار المواد الكيميائية المستخدمة في التنظيف من أهم القرارات التي تؤثر على البيئة. فريش كلين تحرص على استخدام مواد تنظيف صديقة للبيئة، قابلة للتحلل البيولوجي، وخالية من المواد الضارة.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-flask"></i>
                     </div>
@@ -1035,7 +1035,7 @@
                 <h3>التوعية البيئية والتدريب</h3>
                 <p>تؤمن فريش كلين بأهمية التوعية البيئية والتدريب المستمر للموظفين والعملاء. برامج التوعية تساعد في نشر الوعي البيئي وتشجيع الممارسات المستدامة.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-graduation-cap"></i>
                     </div>
@@ -1093,7 +1093,7 @@
                 <h3>خدمات تنظيف المنازل من فريش كلين</h3>
                 <p>نقدم مجموعة واسعة من خدمات تنظيف المنازل التي يمكن تخصيصها لتناسب احتياجاتك وجدولك الزمني. سواء كنت بحاجة إلى تنظيف عميق لمرة واحدة أو خدمة تنظيف منتظمة، فإن فريقنا مستعد لتقديم أفضل النتائج.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-house-damage"></i>
                     </div>
@@ -1232,7 +1232,7 @@
                 <h3>تنظيف وتلميع الأرضيات بأنواعها</h3>
                 <p>تتطلب أنواع الأرضيات المختلفة (رخام، جرانيت، سيراميك، باركيه) عناية خاصة وتقنيات تنظيف وتلميع مخصصة للحفاظ على جمالها ولمعانها. فريق فريش كلين لديه الخبرة والمعدات اللازمة للتعامل مع جميع أنواع الأرضيات.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-brush"></i>
                     </div>
@@ -1421,7 +1421,7 @@
                 </div>
 
                 <h3>نصائح للنظافة في مكان العمل</h3>
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-desktop"></i>
                     </div>
@@ -1567,7 +1567,7 @@
                 <h3>التدريب والتأهيل المستمر</h3>
                 <p>مع تطور التقنيات، سيصبح التدريب والتأهيل المستمر للموظفين أمراً حيوياً. فريش كلين تلتزم بتطوير مهارات فريقها لمواكبة أحدث الابتكارات.</p>
 
-                <div class="service-card">
+                <div class="">
                     <div class="icon-circle">
                         <i class="fas fa-graduation-cap"></i>
                     </div>
