--- a/furniture-moving-in-the-Gulf/index.html
+++ b/furniture-moving-in-the-Gulf/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دليل شامل لنقل العفش في الخليج - خدمات Exo Move المتميزة</title>
-    
+    <meta name="description" content="تعرف على دليل شامل لخدمات نقل العفش في منطقة الخليج مع Exo Move، حيث نُقدم أفضل الحلول المتميزة للنقل الآمن والسريع بأعلى معايير الجودة." />
+    <meta name="keywords" content="نقل العفش في الخليج, خدمات نقل الأثاث, Exo Move, شركات نقل العفش, نقل أثاث الخليج, خدمات النقل المتميزة" />
+    <meta name="author" content="Exo Move" />
+    <meta name="robots" content="index, follow" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Meta Open Graph (لفيسبوك ووسائل التواصل) -->
+    <meta property="og:title" content="دليل شامل لنقل العفش في الخليج - خدمات Exo Move المتميزة" />
+    <meta property="og:description" content="اكتشف خدمات Exo Move المتميزة في نقل العفش داخل الخليج مع نصائح ودليل شامل لضمان تجربة نقل سهلة وآمنة." />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://yourwebsite.com/gulf-furniture-moving-guide" />
+    <meta property="og:image" content="https://yourwebsite.com/images/exo-move-furniture-guide.jpg" />
+
+    <!-- Meta Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="دليل شامل لنقل العفش في الخليج - خدمات Exo Move المتميزة" />
+    <meta name="twitter:description" content="تعرف على أفضل حلول نقل العفش في الخليج مع خدمات Exo Move المتخصصة، دليل شامل وآمن للنقل." />
+    <meta name="twitter:image" content="https://yourwebsite.com/images/exo-move-furniture-guide.jpg" />
+        
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" href="../assets/css/style.css">
         <!-- Tailwind CSS footer -->
