--- a/index.html
+++ b/index.html
@@ -136,43 +136,7 @@
     </nav>
 </navbar>
 
-    <!-- Hero Section -->
-    <!-- <section class="luxury-gradient pt-40 pb-16 relative overflow-hidden">
-        <div class="particles" id="particles"></div>
-        <div class="container-custom relative z-10">
-            <div class="grid lg:grid-cols-2 gap-12 items-center">
-                <div class="text-pure-white">
-                    <h1 class="text-4xl lg:text-6xl font-bold mb-6 font-luxury">أفضل الخدمات المنزلية في دول الخليج</h1>
-                    <p class="text-xl mb-8 opacity-90 leading-relaxed font-elegant">
-                        نقدم لك مجموعة شاملة من الخدمات المنزلية عالية الجودة في جميع أنحاء دول الخليج العربي. من نقل العفش إلى خدمات التنظيف، نحن هنا لخدمتك بأعلى معايير الفخامة والجودة.
-                    </p>
-                    <div class="flex flex-col sm:flex-row gap-4">
-                        <button class="rose-btn text-lg px-8 py-4" onclick="scrollToServices()">
-                            <i class="fas fa-search ml-2"></i>
-                            استكشف خدماتنا
-                        </button>
-                        <div class="flex justify-center sm:justify-start">
-                        <a href="tel:0565265233">
-                            <button class="luxury-btn text-lg px-8 py-4">
-                            <i class="fas fa-phone ml-2"></i>
-                            اتصل بنا الآن
-                            </button>
-                        </a>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="luxury-card p-8 text-center hidden sm:block">
-                    <img src="assets/images/gulf-cleaning.jpg" alt="خدمات التنظيف" class="w-full h-64 object-cover rounded-lg mb-6">
-                    <div class="service-icon">
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h3 class="text-2xl font-bold text-yellow-600 mb-4 font-luxury">خدمات فاخرة</h3>
-                    <p class="text-silver-mist font-elegant">بأعلى معايير الجودة والاحترافية</p>
-                </div>
-            </div>
-        </div>
-    </section> -->
+
   <section class="luxury-hero-section relative overflow-hidden mt-20">
     <!-- ضباب شفاف فوق الخلفية -->
     <div class="absolute inset-0 bg-black bg-opacity-40 backdrop-blur-sm z-0"></div>
@@ -261,7 +225,7 @@
     /* Add any other custom styles for .container-custom, .text-pure-white, .font-luxury, .font-elegant, .rose-btn, .luxury-btn, .luxury-card, .service-icon, .text-silver-mist if they are not defined elsewhere */
 </style>
 
-
+<!-- about section -->
 <section class="bg-gray-50 py-12 md:py-20">
   <div class="container mx-auto px-4">
     <div class="flex flex-wrap -mx-4 items-center">
@@ -321,10 +285,11 @@
             <a href="#" class="text-sm font-medium =" style="color: #590d3d;"> بشاير الخير </a>
           </div>
         </div>
+       <!-- <img src="" alt=""> -->
 
         <p class="text-lg text-gray-700 leading-relaxed mb-8">
           مهمتنا الأساسية هي تسهيل حياتك اليومية من خلال توفير وصول سريع ومباشر إلى 
-          <a href="#" class="font-bold hover:underline transition-colors" style="color: #590d3d;">أفضل الشركات</a> 
+          <a href="#services" class="font-bold hover:underline transition-colors" style="color: #590d3d;">أفضل الشركات</a> 
           التي تتميز بالجودة العالية والاحترافية المتميزة. اعتمد علينا دائماً لتجد أفضل الحلول المبتكرة لجميع احتياجاتك المنزلية والتجارية.
         </p>
 
