--- a/air-conditioner-maintenance/index.html
+++ b/air-conditioner-maintenance/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دليل شامل لصيانة وتعديل المكيفات - آيرون كول</title>
+    <!-- Meta SEO  -->
+    <meta name="description" content="اكتشف دليل آيرون كول المتكامل لصيانة وتعديل المكيفات، مع نصائح احترافية للحفاظ على كفاءة التبريد وتوفير استهلاك الطاقة بأفضل الممارسات." />
+    <meta name="keywords" content="صيانة المكيفات, تعديل المكيفات, آيرون كول, خدمات التكييف, تنظيف المكيفات, توفير الطاقة, صيانة تكييف الخليج" />
+    <meta name="author" content="آيرون كول" />
+    <meta name="robots" content="index, follow" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Meta Open Graph  -->
+    <meta property="og:title" content="دليل شامل لصيانة وتعديل المكيفات - آيرون كول" />
+    <meta property="og:description" content="تعرف على خطوات صيانة وتعديل المكيفات مع آيرون كول، دليل احترافي لتحسين أداء أجهزة التكييف وتقليل استهلاك الكهرباء." />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://yourwebsite.com/aircon-maintenance-guide" />
+    <meta property="og:image" content="https://yourwebsite.com/images/aircon-maintenance-guide.jpg" />
+
+    <!-- Meta Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="دليل شامل لصيانة وتعديل المكيفات - آيرون كول" />
+    <meta name="twitter:description" content="كل ما تحتاج معرفته لصيانة وتعديل المكيفات مع آيرون كول، نصائح وتقنيات لضمان أداء تبريد مثالي." />
+<meta name="twitter:image" content="https://yourwebsite.com/images/aircon-maintenance-guide.jpg" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./style.css">
@@ -71,7 +91,7 @@
        
     </nav>
 </navbar>
-    Header
+    
     <header class="gradient-bg text-white py-12">
         <div class="container mx-auto px-4 py-20">
             <div class="text-center">
