--- a/furniture-moving-companies/index.html
+++ b/furniture-moving-companies/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت - أفضل شركات النقل المضمونة</title>
-    <meta name="description" content="اكتشف كيفية اختيار شركة نقل أثاث موثوقة في الكويت مع دليل شامل لأفضل الشركات المضمونة التي توفر أمان وسرعة وكفاءة في خدمات النقل.">
-    <meta name="keywords" content="شركة نقل أثاث في الكويت, نقل عفش الكويت, شركات نقل موثوقة, شركات نقل مضمونة, خدمات النقل في الكويت, نقل الأثاث بأمان">
-    <meta name="author" content="دليل شركات النقل في الكويت">
+    <!-- Meta SEO الأساسية -->
+    <meta name="description" content="تعرف على دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت، مع قائمة بأفضل شركات النقل المضمونة التي تضمن لك سرعة وأمان وكفاءة في عملية النقل." />
+    <meta name="keywords" content="نقل أثاث الكويت, شركات نقل الأثاث في الكويت, شركات نقل موثوقة, نقل عفش الكويت, دليل نقل الأثاث, شركات نقل أثاث مضمونة" />
+    <meta name="author" content="Your Company Name" />
+    <meta name="robots" content="index, follow" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Meta Open Graph (لفيسبوك ووسائل التواصل) -->
+    <meta property="og:title" content="دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت - أفضل شركات النقل المضمونة" />
+    <meta property="og:description" content="دليلك المتكامل لاختيار أفضل شركة نقل أثاث في الكويت مع نصائح ذهبية وقائمة بأفضل الشركات المضمونة." />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://yourwebsite.com/kuwait-furniture-moving-guide" />
+    <meta property="og:image" content="https://yourwebsite.com/images/kuwait-moving-guide.jpg" />
+
+    <!-- Meta Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت - أفضل شركات النقل المضمونة" />
+    <meta name="twitter:description" content="كل ما تحتاج معرفته لاختيار شركة نقل أثاث موثوقة بالكويت مع قائمة بأفضل الخيارات المضمونة والنصائح العملية." />
+    <meta name="twitter:image" content="https://yourwebsite.com/images/kuwait-moving-guide.jpg" />
 
     <!-- Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -38,7 +55,7 @@
         }
           @font-face {
             font-family: "Lama-sans";
-            src: url("../assets/font/LamaSans-Black.woff") format("woff");
+            src: url("../assets/font/ArbFONTS-LamaSans-Regular.ttf") format("woff");
           
 
         }
@@ -625,7 +642,9 @@
 </navbar>
     <section class="hero-section ">
         <div class="container mx-auto px-4 py-20">
-            <h1><i class="fas fa-truck-moving me-3"></i>دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت</h1>
+            <h1>
+                دليل شامل لاختيار شركة نقل أثاث موثوقة في 
+                <span><a href="https://www.bashir-mover.com/" class="text-yellow-400 underline">الكويت</a></span></h1>
             <p class="lead">الدليل الأكثر شمولية لاختيار أفضل شركات نقل الأثاث والعفش في دولة الكويت مع ضمان الجودة والأمان</p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-8">
                 <div class="text-center">
@@ -648,10 +667,10 @@
         <!-- Introduction Section -->
         <section class="content-section">
             <div class="main-content">
-                <h2 class="section-title">مقدمة شاملة حول نقل الأثاث في الكويت</h2>
+                <h2 class="section-title">مقدمة شاملة حول <span><a href="https://www.bashir-mover.com/" class="text-yellow-400 underline">نقل الاثاث</a></span></h1> في الكويت</h2>
                 
                 <p class="text-lg leading-relaxed mb-6">
-                    تُعتبر عملية <strong>نقل الأثاث والعفش</strong> من أهم التحديات التي تواجه الأسر والشركات في دولة الكويت، حيث تتطلب هذه العملية خبرة متخصصة ودقة عالية لضمان سلامة الممتلكات والأثاث الثمين. في هذا الدليل الشامل، سنستعرض معًا كافة الجوانب المهمة لاختيار <strong>شركة نقل أثاث موثوقة في الكويت</strong>، بدءًا من المعايير الأساسية وصولاً إلى النصائح العملية التي ستساعدك في اتخاذ القرار الصحيح.
+                    تُعتبر عملية <strong><a href="https://www.bashir-mover.com/" class="text-yellow-400 underline">   نقل الاثاث والعفش</a>  </strong> من أهم التحديات التي تواجه الأسر والشركات في دولة الكويت، حيث تتطلب هذه العملية خبرة متخصصة ودقة عالية لضمان سلامة الممتلكات والأثاث الثمين. في هذا الدليل الشامل، سنستعرض معًا كافة الجوانب المهمة لاختيار <strong> <a href="https://www.bashir-mover.com/" class="text-yellow-400 underline"> شركة نقل أثاث موثوقة في الكويت</a>     </strong>، بدءًا من المعايير الأساسية وصولاً إلى النصائح العملية التي ستساعدك في اتخاذ القرار الصحيح.
                 </p>
 
                 <div class="highlight-text">
